Don't collapse columns with large-offset (fix #307)

--- a/scss/grid/_grid.scss
+++ b/scss/grid/_grid.scss
@@ -116,12 +116,14 @@ th.column {
   }
 
   //Collapsed logic
-  .collapse {
-    > tbody > tr > td.large-#{$i},
-    > tbody > tr > th.large-#{$i} {
-      padding-right: 0;
-      padding-left: 0;
-      width: -zf-grid-calc-px($i, $grid-column-count, $global-width) + $global-gutter;
+  .collapse > tbody > tr {
+    > td.large-#{$i},
+    > th.large-#{$i} {
+      &:not([class*=large-offset]) {
+        padding-right: 0;
+        padding-left: 0;
+        width: -zf-grid-calc-px($i, $grid-column-count, $global-width) + $global-gutter;
+      }
     }
 
     //Gotta give it that extra love for the first and last columns.
